--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "type": "module",
   "engines": {
     "node": "20.x"
